// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridViewRows component Default component 1`] = `
<div
  class="grid-view__rows"
  style="transform: translateY(0px) translateX(0px); left: 0px;"
>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          Bram
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          foo
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          bar
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          Jo
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GridViewRows component With row details 1`] = `
<div
  class="grid-view__rows"
  style="transform: translateY(0px) translateX(0px); left: 0px;"
>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column grid-view__column--no-border-right"
      style="width: 72px;"
    >
      <div
        class="grid-view__row-info"
      >
        <div
          class="grid-view__row-count"
          title="2"
        >
          
            2
          
        </div>
         
        <div
          class="grid-view__row-drag"
        />
         
        <a
          class="grid-view__row-more"
        >
          <i
            class="iconoir-expand"
          />
        </a>
         
      </div>
    </div>
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          Bram
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column grid-view__column--no-border-right"
      style="width: 72px;"
    >
      <div
        class="grid-view__row-info"
      >
        <div
          class="grid-view__row-count"
          title="4"
        >
          
            4
          
        </div>
         
        <div
          class="grid-view__row-drag"
        />
         
        <a
          class="grid-view__row-more"
        >
          <i
            class="iconoir-expand"
          />
        </a>
         
      </div>
    </div>
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          foo
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          bar
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column grid-view__column--no-border-right"
      style="width: 72px;"
    >
      <div
        class="grid-view__row-info"
      >
        <div
          class="grid-view__row-count"
          title="3"
        >
          
            3
          
        </div>
         
        <div
          class="grid-view__row-drag"
        />
         
        <a
          class="grid-view__row-more"
        >
          <i
            class="iconoir-expand"
          />
        </a>
         
      </div>
    </div>
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          Jo
        </div>
      </div>
    </div>
  </div>
</div>
`;
